# sqms-mgmt

./: .gitignore  README.md
adminui/: .env.example  DEPLOY.md  README.md  VERSION_HISTORY.md  main.py  pyproject.toml  requirements.txt  run.sh
adminui/config/: config.json
adminui/modules/: __init__.py
grafana/: 1.auth-team_addr_get.py  2.auth-team_addr_save.py  3.auth-team_addr_change.py  4.all-folder_permission_save.py  all-folder_permission_get.py  export_all_dashboards.py  import_dashboard.py  pyproject.toml
grafana/custom_login/: README.md  customize_grafana_v0.1.sh  customize_grafana_v0.2.sh  customize_grafana_v0.3.sh  customize_grafana_v0.5.sh
grafana/dashboard_export/: .env.example  README.md  export_all_dashboards.py  export_all_dashboards2.py  export_dashboard_via_sqlite.py  import_dashboard.py
grafana/desc_editor/: .env.example  .gitignore  README.md  analyze_node_exporter_panels.py  final_verification.py  find_dashboard_by_title.py  find_uid.py  generate_node_exporter_descriptions.py  generate_panel_summary.py  get_first_15_panels.py  improved_korean_descriptions.json  list_all_dashboards.py  list_folders.py  main.py  node_exporter_descriptions_20250726_224736.json  node_exporter_full_analysis_20250726_223914.json  node_exporter_panel_summary_20250726_224021.json  node_exporter_panel_summary_20250726_224021.md  requirements.txt  search_all_dashboards.py  test_grafana_api.py  update_dashboard.py  update_dashboard_descriptions.py  update_descriptions_final.py
grafana/grafana2teams/: background.js  content-grafana.js  content-teams.js  manifest.json  (+3 more)
(+69 files in other folders)
