[project]
name = "adminui"
version = "0.1.0"
description = "SQMS Admin UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "packaging>=21.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "python-ldap>=3.4.4",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
