[project]
name = "grafana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas==2.1.4",
    "plotly==5.17.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "safety>=3.6.0",
    "streamlit==1.29.0",
    "update>=0.0.1",
]
